updated spotipy in pipfile from 2.22.0 to 2.22.1

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 django = "*"
 django-extensions = "*"
 django-environ = "*"
-spotipy = "*"
+spotipy = ">=2.22.1"
 pandas = "*"
 igdb-api-v4 = "*"
 pillow = "*"
